crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__value_with_multiplier_range.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo(
    pub crate::Length,
    pub crate::Length,
    pub Option<crate::Length>,
    pub Option<crate::Length>,
);
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <crate::Length>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        let val0 = p.parse::<crate::Length>()?;
        let val1 = p.parse::<crate::Length>()?;
        let val2 = if p.peek::<crate::Length>() {
            let val = p.parse::<crate::Length>()?;
            Some(val)
        } else {
            None
        };
        let val3 = if p.peek::<crate::Length>() {
            let val = p.parse::<crate::Length>()?;
            Some(val)
        } else {
            None
        };
        Ok(Self(val0, val1, val2, val3))
    }
}
#[automatically_derived]
impl ::css_parse::ToCursors for Foo {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        ::css_parse::ToCursors::to_cursors(&self.0, s);
        ::css_parse::ToCursors::to_cursors(&self.1, s);
        if let Some(inner) = &self.2 {
            ::css_parse::ToCursors::to_cursors(inner, s);
        }
        if let Some(inner) = &self.3 {
            ::css_parse::ToCursors::to_cursors(inner, s);
        }
    }
}
